--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -8,5 +8,6 @@ on:
 jobs:
   ping:
     runs-on: ubuntu-latest
+    environment: Prod
     steps:
       - run: curl -s -S -f -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" "https://accounts.google.com/o/oauth2/token"
