Suppress output of ping.yml

--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     environment: Prod
     steps:
-      - run: curl -s -S -f -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" "https://accounts.google.com/o/oauth2/token"
+      - run: curl -s -S -f -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" "https://accounts.google.com/o/oauth2/token" >/dev/null
