--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,5 +15,5 @@ jobs:
       - run: git archive -o extension.zip HEAD
       - run: |
           ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token) \
-          curl "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${{ vars.APP_ID }}" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -X PUT -T extension.zip \
-          curl "https://www.googleapis.com/chromewebstore/v1.1/items/${{ vars.APP_ID }}/publish" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -H "Content-Length: 0" -X POST
+          curl -X PUT "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${{ vars.APP_ID }}" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -T extension.zip \
+          curl -X POST "https://www.googleapis.com/chromewebstore/v1.1/items/${{ vars.APP_ID }}/publish" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -H "Content-Length: 0"
