--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "repository": "git@github.com:smartinio/bitbucket-conventional-comments.git",
-  "author": "Sam Martin <privatesmartin@gmail.com>",
+  "author": "Sam Martin <me@smartin.io>",
   "license": "MIT",
+  "scripts": {
+    "style": "prettier --write .",
+    "check:style": "prettier --check .",
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:unit": "jest --passWithNoTests",
+    "test:e2e": "cypress run --browser chrome --e2e",
+    "open:e2e": "cypress open --browser chrome --e2e",
+    "postinstall": "./bin/postinstall.sh"
+  },
   "devDependencies": {
+    "cypress": "^12.7.0",
+    "jest": "^29.4.3",
     "prettier": "^2.3.1"
   }
 }
