Feature/ci improvements (#22)
* Add cypress and enforce prettier

* Run yarn style

--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,9 +1,9 @@
-name: Ping
+name: ping
 
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 13 1 * *'
+    - cron: '0 13 * * *'
 
 jobs:
   ping:
