--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,61 @@
-name: Publish
+name: publish
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ master ]
-    paths: [ manifest.json ]
+    inputs:
+      ref:
+        description: The commit SHA to publish. Defaults to latest commit on master.
+        type: string
+        required: false
 
 jobs:
-  publish:
+  e2e:
+    environment: Dev
     runs-on: ubuntu-latest
-    environment: Prod
+    env:
+      CYPRESS_BITBUCKET_EMAIL: ${{ secrets.CYPRESS_BITBUCKET_EMAIL }}
+      CYPRESS_BITBUCKET_PASSWORD: ${{ secrets.CYPRESS_BITBUCKET_PASSWORD }}
+      CYPRESS_PULL_REQUEST_URL: ${{ secrets.CYPRESS_PULL_REQUEST_URL }}
     steps:
       - uses: actions/checkout@v3
-      - run: git archive -o extension.zip HEAD
-      - run: |
-          ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token) \
-          curl -X "PUT" "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${{ vars.APP_ID }}" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -T "extension.zip" \
-          curl -X "POST" "https://www.googleapis.com/chromewebstore/v1.1/items/${{ vars.APP_ID }}/publish" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -H "Content-Length: 0"
+        with:
+          ref: ${{ inputs.ref }}
+      - uses: actions/setup-node@v3
+      - run: npm i -g yarn
+      - run: yarn install --frozen-lockfile
+      - run: yarn test:e2e
+      - uses: actions/upload-artifact@v3
+        if: success() || failure()
+        with:
+          name: cypress-output
+          path: '**/cypress/out/'
+          if-no-files-found: ignore
+
+  publish:
+    needs: [e2e]
+    runs-on: ubuntu-latest
+    environment: Prod
+    env:
+      APP_ID: ahbhljoncimmieljhlkkeifohkigiefa
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref }}
+
+      - name: Generate artifact name
+        run: echo "ARTIFACT=build-$(git rev-parse --short HEAD).zip" >> $GITHUB_ENV
+
+      - name: Zip artifact
+        run: git archive -o ${{ env.ARTIFACT }} HEAD
+
+      - name: Generate access token
+        run: |
+          echo "ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)" >> $GITHUB_ENV
+
+      - name: Upload artifact
+        run: |
+          curl -X "PUT" "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${{ env.APP_ID }}" -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" -H "x-goog-api-version: 2" -T "${{ env.ARTIFACT }}"
+
+      - name: Publish extension
+        run: |
+          curl -X "POST" "https://www.googleapis.com/chromewebstore/v1.1/items/${{ env.APP_ID }}/publish" -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" -H "x-goog-api-version: 2" -H "Content-Length: 0"
