--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,36 @@
-name: Publish
-
 on:
   workflow_dispatch:
-  push:
-    branches: [master]
-    paths: [manifest.json]
+    inputs:
+      ref:
+        description: The commit SHA to publish. Defaults to latest commit on master.
+        type: string
+        required: false
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     environment: Prod
+    env:
+      APP_ID: ahbhljoncimmieljhlkkeifohkigiefa
     steps:
       - uses: actions/checkout@v3
-      - run: git archive -o extension.zip HEAD
-      - run: |
-          ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token) \
-          curl -X "PUT" "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${{ vars.APP_ID }}" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -T "extension.zip" \
-          curl -X "POST" "https://www.googleapis.com/chromewebstore/v1.1/items/${{ vars.APP_ID }}/publish" -H "Authorization: Bearer $ACCESS_TOKEN" -H "x-goog-api-version: 2" -H "Content-Length: 0"
+        with:
+          ref: ${{ inputs.ref }}
+
+      - name: Generate artifact name
+        run: echo "ARTIFACT=build-$(git rev-parse --short HEAD).zip" >> $GITHUB_ENV
+
+      - name: Zip artifact
+        run: git archive -o ${{ env.ARTIFACT }} HEAD
+
+      - name: Generate access token
+        run: |
+          echo "ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&refresh_token=${{ secrets.REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)" >> $GITHUB_ENV
+
+      - name: Upload artifact
+        run: |
+          curl -X "PUT" "https://www.googleapis.com/upload/chromewebstore/v1.1/items/${{ env.APP_ID }}" -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" -H "x-goog-api-version: 2" -T "${{ env.ARTIFACT }}"
+
+      - name: Publish extension
+        run: |
+          curl -X "POST" "https://www.googleapis.com/chromewebstore/v1.1/items/${{ env.APP_ID }}/publish" -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" -H "x-goog-api-version: 2" -H "Content-Length: 0"
