:ambulance: fix: make it works to bitbucket.org
Change to make it works for both on premise bitbucket server and on Bitbucket.org cloud.

Closes #12

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,12 @@
       "css": ["src/style.css"],
       "js": ["src/index.js"],
       "run_at": "document_idle"
+    },
+    {
+      "matches": ["*://bitbucket.org/**/*/pull-requests/*"],
+      "css": ["src/style.css"],
+      "js": ["src/index.js"],
+      "run_at": "document_idle"
     }
   ],
   "web_accessible_resources": [
